--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
-#测试一下
-
-<html> 
-我还是原来的我
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8">
+</head>
+<body>
+<span id="login_container"></span>
+<script src="http://res.wx.qq.com/connect/zh_CN/htmledition/js/wxLogin.js"></script>
+<script>
+    var obj = new WxLogin({
+        id: "login_container",
+        appid: "wxbdc5610cc59c1631",
+        scope: "snsapi_login",
+        redirect_uri: encodeURIComponent("https://passport.yhd.com/wechat/Fcallback.do"),
+        state: Math.ceil(Math.random()*1000),
+        style: "black",
+        href: ""});
+</script>
+</body>
 </html>
